# MusicLab

./: .gitmodules  .travis.yml  CMakeLists.txt  CompileOptions.cmake  Makefile  MusicLab.cmake  README.md
.circleci/: config.yml
Documents/: CPP_Guideline.md  QML_Guideline.md
